# beanllm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CHANGES_ANALYSIS_COMPLETE.md  CLAUDE.md  COMMITTABLE_EXCLUDE_MD.md  COMMIT_MESSAGES.md  COMMIT_PLAN.md  DEVELOPMENT_LOG.md  GOOGLE_WORKSPACE_SETUP.md  MANIFEST.in  Makefile  PYPI_CHECKLIST.md  QUICK_START.md  README.md  README_KO.md  RELEASE_NOTES.md  beantui.toml  docker-compose.yml  publish.sh  pyproject.toml
.claude/: COMMIT_WORKFLOW.md  GETTING_STARTED.md  MODEL_SELECTION_GUIDE.md  README.md  TODO.md  check-setup.sh  settings.json
.claude/agents/: architecture-fixer.md  code-reviewer.md  performance-optimizer.md
.claude/commands/: arch-check.md  build-fix.md  code-review.md  commit.md  dedup.md  plan.md  pr.md  tdd.md  test-gen.md  update-docs.md
.claude/rules/: clean-architecture.md  code-quality.md  coding-standards.md  git-workflow.md  security.md  testing.md
.claude/skills/: backend-patterns.md  decorator-pattern.md  frontend-design-beanllm.md  frontend-patterns.md  python-clean-architecture.md  webapp-testing-beanllm.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml  refactor.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  stale-branches.yml  tests.yml
CHAT_IMPROVEMENT_PLANS/: 00_INDEX.md  01_CURRENT_IMPLEMENTATION.md  02_AGENTIC_MODE.md  03_CONTEXT_MANAGEMENT.md  04_SESSION_RAG.md  05_DOCUMENT_UPLOAD.md  06_SPECIAL_FEATURES.md  07_INTENT_CLASSIFIER.md  08_MULTIMODAL_CONTEXT.md  09_SEARCH_ENGINE.md  10_CLOUD_SERVICES.md  11_UI_UX.md  12_MCP_INTEGRATION.md  13_DB_OPTIMIZATION.md  14_SEARCH_ARCHITECTURE.md  15_ARCHITECTURE_REVIEW.md  16_PLAN_MODE.md  17_VISUAL_WORKFLOW.md  CURRENT_STATE_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_SUMMARY.md  QUICK_START.md  README.md
admin/: README.md  dashboard.py
docs/: ADVANCED_FEATURES.md  ADVANCED_FEATURES_USAGE.md  API_REFERENCE.md  ARCHITECTURE_COMPLIANCE.md  ARCHITECTURE_INTEGRATION.md  BEANLLM_IMPROVEMENT_ROADMAP_2025.md  BEANPDF_REMAINING_FEATURES.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  DISTRIBUTED_ARCHITECTURE_PERFORMANCE.md  IMPLEMENTATION_ROADMAP.md  LATEST_MODELS_RESEARCH_2024_2025.md  LIBRARY_FEATURES_ANALYSIS.md  LIBRARY_FEATURES_USAGE.md  OCR_MODULE_PLAN.md  PHASE_2_3_ARCHITECTURE_REVIEW.md  PHASE_2_COMPLETE.md  PROGRESS.md  RAG_TECHNOLOGY_SURVEY_2024_2025.md  README.md  UPDATES_2025.md  VISUALIZATION_PLAN.md  phase3_completion_summary.md  phase3_week3_completion.md  phase3_week4_completion.md  phase4_week1-2_completion.md  phase4_week3_completion.md  phase4_week4_completion.md
docs/adr/: ADR-001-clean-architecture.md  ADR-002-unified-provider-interface.md  ADR-003-optional-extras.md
docs/api/: README.md  agent.md  client.md  models.md  rag.md
docs/architecture/: system-overview.md
docs/decision-log/: DL-001-clean-architecture.md  DL-002-optional-extras.md  DL-003-circuit-breaker-per-provider.md  README.md
docs/legacy/: migrate.sh
docs/playbooks/: 01-provider-circuit-open.md  02-rate-limit-exceeded.md  03-add-new-provider.md
docs/theory/: 01_cs_foundations_for_ai.md  02_ai_engineering_roadmap.md  07_web_search_theory.md
docs/tutorials/: 01_embeddings_tutorial.py  01_setup_and_installation.ipynb  02_core_client.ipynb  03_graph_tutorial.py  03_rag_and_documents.ipynb  03_vision_rag_tutorial.py  04_embeddings_vector_stores.ipynb  04_multi_agent_tutorial.py  05_agent_and_tools.ipynb  05_ml_models_tutorial.py  06_chain_and_graph.ipynb  06_tool_calling_tutorial.py  07_multi_agent.ipynb  07_web_search_tutorial.py  08_audio_speech_tutorial.py  08_vision_rag.ipynb  09_ocr.ipynb  09_production_features_tutorial.py  10_audio_processing.ipynb  11_web_search.ipynb  12_evaluation.ipynb  13_finetuning.ipynb  14_production_features.ipynb  15_distributed_architecture.ipynb  16_performance_benchmarks.ipynb  17_practical_knowledge_graph.ipynb
examples/: advanced_search_demo.py  basic_usage.py  callbacks_demo.py  check_providers.py  embeddings_demo.py  hyde_query_expansion_demo.py  improved_api_demo.py  model_params.py  model_router_example.py  ner_benchmark_demo.py  phase5_demo.py  rag_chain_demo.py  rag_debug_example.py  rag_debugging_demo.py  rag_demo.py  state_graph_demo.py  streaming_example.py  test_import.py  trulens_evaluation_demo.py  vector_store_selection_demo.py  vector_stores_demo.py
mcp_server/: README.md  __init__.py  claude_desktop_config.example.json  config.py  run.py
mcp_server/prompts/: __init__.py  templates.py
mcp_server/resources/: __init__.py  session_resources.py
mcp_server/services/: __init__.py  session_manager.py
mcp_server/tools/: __init__.py  agent_tools.py  google_tools.py  kg_tools.py  ml_tools.py  rag_tools.py
playground/: AI_TESTING_METHODS_2026.md  CURSOR_AGENT_TESTING_GUIDE.md  E2E_TESTING_STRATEGY.md  README.md
playground/backend/: .dockerignore  .env.example  COMMIT_MESSAGES.md  COMPLETION_SUMMARY.md  DETAILED_IMPLEMENTATION_PLAN.md  Dockerfile  IMPLEMENTATION_PROGRESS.md  LOCAL_SETUP.md  MISSING_FEATURES.md  MONITORING_README.md  POETRY_SHELL.md  README.md  REPAIR_CHECKLIST.md  START_GUIDE.md  TROUBLESHOOTING.md  VERIFICATION_SUMMARY.md  auto_setup_and_test.sh  chat_history.py  common.py  database.py  main.py  mcp_streaming.py  models.py  monitoring.py  (+13 more)
scripts/: analyze_duplicates.py  check-env.sh  fix_relative_imports.py  mongo-init.js  refactor_domain_infrastructure.py  welcome.py
tests/: README.md  __init__.py  conftest.py  run_embeddings_tests.py  run_text_splitter_tests.py  run_vector_stores_tests.py  test_cli.py  test_config.py  test_decorators_validation.py  test_domain.py  test_e2e.py  test_facade.py  test_import.py  test_infrastructure.py  test_infrastructure_legacy.py  test_integration.py  test_phase5.py  test_registry.py  test_text_splitters.py  test_utils.py  test_utils_and_nodes.py  test_utils_legacy.py
wiki/: README.md  architecture.md  contributing.md  facade.md  providers.md  testing.md
(+1233 files in other folders)
