[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beanllm"
version = "0.2.2"
description = "Unified toolkit for managing and using multiple LLM providers with automatic model detection"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "leebeanbin", email = "wjdqlsdu388@gmail.com"}
]
keywords = [
    "llm", "beanllm", "ai-toolkit",
    "openai", "claude", "anthropic", "gemini", "ollama",
    "ai", "machine-learning", "rag", "langchain",
    "embedding", "vector-store", "chatbot", "gpt",
    "multi-agent", "agent", "nlp", "prompt-engineering"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# 필수 의존성 (핵심 기능만)
dependencies = [
    "httpx>=0.24.0,<1.0.0",  # HTTP 클라이언트
    "python-dotenv>=1.0.0,<2.0.0",  # .env 파일 로드
    "rich>=13.0.0,<15.0.0",  # 터미널 UI
    "beautifulsoup4>=4.12.0,<5.0.0",  # Web scraping
    "requests>=2.31.0,<3.0.0",  # HTTP requests
    "numpy>=1.24.0,<3.0.0",  # Numerical operations
    "tiktoken>=0.5.0,<1.0.0",  # Token counting
    # beanPDFLoader 의존성
    "PyMuPDF>=1.23.0,<2.0.0",  # Fast PDF 파싱 (fitz)
    "pdfplumber>=0.10.0,<1.0.0",  # 정확한 테이블 추출
    "pandas>=2.0.0,<3.0.0",  # 테이블 데이터 처리
]

# 선택적 의존성 (Provider별로 선택 가능)
[project.optional-dependencies]
# OpenAI 사용
openai = [
    "openai>=1.0.0,<3.0.0",
]

# Anthropic Claude 사용
anthropic = [
    "anthropic>=0.18.0,<1.0.0",
]

# Google Gemini 사용
gemini = [
    "google-generativeai>=0.3.0,<1.0.0",
]

# Ollama 사용 (로컬 모델)
ollama = [
    "ollama>=0.1.0,<1.0.0",
]

# Audio 기능 (음성 인식/합성)
audio = [
    "openai-whisper>=20231117,<20250626",
]

# ML-based PDF processing (marker-pdf)
ml = [
    "marker-pdf>=0.2.0,<2.0.0",
    "torch>=2.0.0,<3.0.0",
]

# CLI 기능
cli = [
    "typer[all]>=0.9.0,<1.0.0", # 'all' includes shell completion dependencies
]

# Model Context Protocol (MCP) 서버
mcp = [
    "fastmcp>=2.0.0,<3.0.0",  # MCP server framework
    "uvicorn>=0.23.0,<1.0.0",  # ASGI server for MCP
    "sse-starlette>=1.6.0,<2.0.0",  # Server-Sent Events support
]

# 모든 Provider 사용
all = [
    "openai>=1.0.0,<3.0.0",
    "anthropic>=0.18.0,<1.0.0",
    "google-generativeai>=0.3.0,<1.0.0",
    "ollama>=0.1.0,<1.0.0",
    "openai-whisper>=20231117,<20250626",
    "marker-pdf>=0.2.0,<2.0.0",
    "torch>=2.0.0,<3.0.0",
    "beanllm[cli]", # Include CLI for 'all' installation
    "beanllm[mcp]", # Include MCP server for 'all' installation
]

# Continuous Evaluation (선택적)
evaluation = [
    "apscheduler>=3.10.0,<4.0.0",
]

# 분산 처리 (Redis + Kafka)
distributed = [
    "redis>=5.0.0,<6.0.0",      # Redis 클라이언트
    "kafka-python>=2.0.0,<3.0.0", # Kafka 클라이언트
    "hiredis>=2.0.0,<3.0.0",    # Redis 성능 향상 (C 확장, 선택적)
]

# Advanced features (v1.0.0+)
advanced = [
    "umap-learn>=0.5.0,<1.0.0",  # Embedding visualization
    "hdbscan>=0.8.0,<1.0.0",  # Clustering
    "scikit-learn>=1.0.0,<2.0.0",  # ML utilities
    "networkx>=3.0.0,<4.0.0",  # Knowledge graphs
    "bayesian-optimization>=1.4.0,<2.0.0",  # Parameter optimization
    "prompt-toolkit>=3.0.0,<4.0.0",  # REPL shell
]

# Optional persistence for knowledge graphs
neo4j = [
    "neo4j>=5.0.0,<6.0.0",
]

# Web playground backend
web = [
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn>=0.23.0,<1.0.0",
    "websockets>=11.0.0,<13.0.0",
]

# 개발 도구
dev = [
    "pytest>=9.0.2,<10.0.0",  # 필수 의존성에서 이동됨
    "pytest-asyncio>=0.21.0,<2.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=23.0.0,<26.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "beanllm[cli]", # Add CLI development tools
]


[project.urls]
Homepage = "https://github.com/leebeanbin/beanllm"
Documentation = "https://github.com/leebeanbin/beanllm#readme"
Repository = "https://github.com/leebeanbin/beanllm"
"Bug Tracker" = "https://github.com/leebeanbin/beanllm/issues"

# CLI 진입점
[project.scripts]
beanllm = "beanllm.utils.cli.cli:main"

# setuptools 설정 (src layout)
[tool.setuptools]
package-dir = {"" = "src"}

# 자동으로 모든 패키지 찾기 (find_packages 사용)
[tool.setuptools.packages.find]
where = ["src"]
include = ["beanllm*"]
exclude = ["tests*", "*.tests*", "*.tests.*", "tests.*"]

[tool.setuptools.package-data]
beanllm = ["data/*.json"]

# Ruff 설정 (linter/formatter)
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long
    "E722",  # bare except
    "E721",  # type comparison
    "E731",  # lambda assignment
    "E402",  # module level import not at top
    "F841",  # unused local variable
    "F402",  # import shadowing
    "F401",  # unused import in try/except blocks
]

# Black 설정 (formatter)
[tool.black]
line-length = 100
target-version = ["py311", "py312"]

# MyPy 설정 (type checker)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# Pytest 설정
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=beanllm --cov-report=html --cov-report=term"
asyncio_mode = "auto"
