[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beanllm"
version = "0.2.2"
description = "Unified toolkit for managing and using multiple LLM providers with automatic model detection"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    {name = "leebeanbin", email = "wjdqlsdu388@gmail.com"}
]
keywords = [
    "llm", "beanllm", "ai-toolkit",
    "openai", "claude", "anthropic", "gemini", "ollama",
    "ai", "machine-learning", "rag", "langchain",
    "embedding", "vector-store", "chatbot", "gpt",
    "multi-agent", "agent", "nlp", "prompt-engineering"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# 필수 의존성 (핵심 기능만)
dependencies = [
    "httpx>=0.24.0,<1.0.0",  # HTTP 클라이언트
    "python-dotenv>=1.0.0,<2.0.0",  # .env 파일 로드
    "rich>=13.0.0,<15.0.0",  # 터미널 UI
    "beautifulsoup4>=4.12.0,<5.0.0",  # Web scraping
    "requests>=2.31.0,<3.0.0",  # HTTP requests
    "numpy>=1.24.0,<3.0.0",  # Numerical operations
    "tiktoken>=0.5.0,<1.0.0",  # Token counting
    "ollama>=0.1.0,<1.0.0",  # Ollama provider (기본 설치)
    # beanPDFLoader 의존성
    "PyMuPDF>=1.23.0,<2.0.0",  # Fast PDF 파싱 (fitz)
    "pdfplumber>=0.10.0,<1.0.0",  # 정확한 테이블 추출
    "pandas>=2.0.0,<3.0.0",  # 테이블 데이터 처리
    "chromadb (>=1.4.1,<2.0.0)",
    "openai (>=2.16.0,<3.0.0)",
]

# 선택적 의존성 (Provider별로 선택 가능)
[project.optional-dependencies]
# OpenAI 사용
openai = [
    "openai>=1.0.0,<3.0.0",
]

# Anthropic Claude 사용
anthropic = [
    "anthropic>=0.18.0,<1.0.0",
]

# Google Gemini 사용
gemini = [
    "google-generativeai>=0.3.0,<1.0.0",
]

# Ollama 사용 (로컬 모델)
ollama = [
    "ollama>=0.1.0,<1.0.0",
]

# Audio 기능 (음성 인식/합성)
audio = [
    "openai-whisper>=20231117,<20250626",
]

# ML-based PDF processing (marker-pdf)
ml = [
    "marker-pdf>=0.2.0,<2.0.0",
    "torch>=2.0.0,<3.0.0",
]

# CLI 기능
cli = [
    "typer[all]>=0.9.0,<1.0.0", # 'all' includes shell completion dependencies
]

# Model Context Protocol (MCP) 서버
mcp = [
    "fastmcp>=2.0.0,<3.0.0",  # MCP server framework
    "uvicorn>=0.23.0,<1.0.0",  # ASGI server for MCP
    "sse-starlette>=1.6.0,<2.0.0",  # Server-Sent Events support
]

# 모든 Provider 사용
all = [
    "openai>=1.0.0,<3.0.0",
    "anthropic>=0.18.0,<1.0.0",
    "google-generativeai>=0.3.0,<1.0.0",
    "ollama>=0.1.0,<1.0.0",
    "openai-whisper>=20231117,<20250626",
    "marker-pdf>=0.2.0,<2.0.0",
    "torch>=2.0.0,<3.0.0",
    # CLI dependencies (directly included to avoid circular reference)
    "typer[all]>=0.9.0,<1.0.0",
    # MCP dependencies (directly included to avoid circular reference)
    "fastmcp>=2.0.0,<3.0.0",
    "uvicorn>=0.23.0,<1.0.0",
    "sse-starlette>=1.6.0,<2.0.0",
]

# 벡터 스토어 (세션 검색·메시지 임베딩, Chroma)
vector = [
    "chromadb>=0.4.0,<1.0.0",
]

# Continuous Evaluation (선택적)
evaluation = [
    "apscheduler>=3.10.0,<4.0.0",
]

# 분산 처리 (Redis + Kafka)
distributed = [
    "redis>=7.1.0,<8.0.0",      # Redis 클라이언트 (web 그룹과 동일한 버전)
    "kafka-python>=2.0.0,<3.0.0", # Kafka 클라이언트
    "hiredis>=2.0.0,<3.0.0",    # Redis 성능 향상 (C 확장, 선택적)
]

# 모니터링 (대시보드 및 메트릭)
monitoring = [
    "kafka-python>=2.0.0,<3.0.0",  # Kafka 클라이언트
    "streamlit>=1.29.0,<2.0.0",     # 실시간 대시보드
    "plotly>=5.18.0,<6.0.0",       # 인터랙티브 차트
    "pandas>=2.0.0,<3.0.0",         # 데이터 처리
]

# Advanced features (v1.0.0+)
advanced = [
    "umap-learn>=0.5.0,<1.0.0",  # Embedding visualization
    "hdbscan>=0.8.0,<1.0.0",  # Clustering
    "scikit-learn>=1.0.0,<2.0.0",  # ML utilities
    "networkx>=3.0.0,<4.0.0",  # Knowledge graphs
    "bayesian-optimization>=1.4.0,<2.0.0",  # Parameter optimization
    "prompt-toolkit>=3.0.0,<4.0.0",  # REPL shell
]

# Optional persistence for knowledge graphs
neo4j = [
    "neo4j>=5.0.0,<6.0.0",
]

# ============================================
# RAG 고급 기능 (쉬운 설치)
# ============================================

# 데이터베이스 로더
# pip install beanllm[db]
db = [
    "psycopg2-binary>=2.9.0,<3.0.0",  # PostgreSQL (동기)
    "asyncpg>=0.29.0,<1.0.0",  # PostgreSQL (비동기)
    "pymongo>=4.0.0,<5.0.0",  # MongoDB (동기)
    "motor>=3.3.0,<4.0.0",  # MongoDB (비동기)
]

# 시맨틱 청킹 (의미 기반 분할, 20-40% 검색 품질 향상)
# pip install beanllm[semantic]
semantic = [
    "sentence-transformers>=2.2.0,<4.0.0",
    "semchunk>=0.3.0,<1.0.0",
]

# ColBERT (Multi-vector 검색, 10-30% 검색 품질 향상)
# pip install beanllm[colbert]
colbert = [
    "ragatouille>=0.0.8,<1.0.0",
]

# ColPali (비전 문서 검색, OCR 불필요)
# pip install beanllm[colpali]
colpali = [
    "byaldi>=0.0.1,<1.0.0",
]

# 엔터프라이즈 RAG (전부 포함)
# pip install beanllm[ragpro]
ragpro = [
    "sentence-transformers>=2.2.0,<4.0.0",
    "semchunk>=0.3.0,<1.0.0",
    "ragatouille>=0.0.8,<1.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "pymongo>=4.0.0,<5.0.0",
    "motor>=3.3.0,<4.0.0",
]

# Web playground backend
web = [
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn>=0.23.0,<1.0.0",
    "websockets>=14.0,<16.0.0",  # Updated for fastmcp compatibility
    "python-multipart>=0.0.22,<0.0.23",  # File uploads
    "motor>=3.3.0,<4.0.0",  # Async MongoDB driver
    "pymongo>=4.0.0,<5.0.0",  # MongoDB driver (motor dependency)
    "cryptography>=41.0.0,<44.0.0",  # API key encryption
    "redis>=7.1.0,<8.0.0",  # Redis client for caching and monitoring
    "ollama>=0.1.0,<1.0.0",  # Ollama provider for local models
    "google-generativeai>=0.3.0,<1.0.0",  # Google Gemini provider
    "networkx>=3.0.0,<4.0.0",  # Knowledge graphs (필수 - Client 초기화 시 필요)
    "google-api-python-client>=2.100.0,<3.0.0",  # Google Workspace API
    "google-auth-oauthlib>=1.1.0,<2.0.0",  # Google OAuth
    "google-auth-httplib2>=0.1.1,<1.0.0",  # Google Auth HTTP
    "streamlit>=1.29.0,<2.0.0",  # Admin Dashboard
    "plotly>=5.18.0,<6.0.0",  # Dashboard charts
]

# 개발 도구
dev = [
    "pytest>=9.0.2,<10.0.0",  # 필수 의존성에서 이동됨
    "pytest-asyncio>=0.21.0,<2.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=23.0.0,<26.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "bandit>=1.7.0,<2.0.0",  # 보안 검사 (pre-commit)
    "pre-commit>=3.0.0,<4.0.0",  # pre-commit 훅
    "faker>=20.0.0,<25.0.0",  # 테스트 데이터 생성
    # CLI dependencies (directly included to avoid circular reference)
    "typer[all]>=0.9.0,<1.0.0",
]


[project.urls]
Homepage = "https://github.com/leebeanbin/beanllm"
Documentation = "https://github.com/leebeanbin/beanllm#readme"
Repository = "https://github.com/leebeanbin/beanllm"
"Bug Tracker" = "https://github.com/leebeanbin/beanllm/issues"

# CLI 진입점
[project.scripts]
beanllm = "beanllm.utils.cli.cli:main"

# setuptools 설정 (src layout)
[tool.setuptools]
package-dir = {"" = "src"}

# 자동으로 모든 패키지 찾기 (find_packages 사용)
[tool.setuptools.packages.find]
where = ["src"]
include = ["beanllm*"]
exclude = ["tests*", "*.tests*", "*.tests.*", "tests.*"]

[tool.setuptools.package-data]
beanllm = ["data/*.json"]

# Ruff 설정 (linter/formatter)
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long
    "E722",  # bare except
    "E721",  # type comparison
    "E731",  # lambda assignment
    "E402",  # module level import not at top
    "F841",  # unused local variable
    "F402",  # import shadowing
    "F401",  # unused import in try/except blocks
]

# Black 설정 (formatter)
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# MyPy 설정 (type checker)
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# Pytest 설정
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=beanllm --cov-report=html --cov-report=term"
asyncio_mode = "auto"

# Poetry 설정 (Poetry shell 및 의존성 관리를 위해)
# Poetry는 PEP 621 형식의 [project] 섹션을 읽습니다.
# 여기서는 Poetry 전용 설정만 정의합니다.
[tool.poetry]
packages = [{include = "beanllm", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
httpx = ">=0.24.0,<1.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
rich = ">=13.0.0,<15.0.0"
beautifulsoup4 = ">=4.12.0,<5.0.0"
requests = ">=2.31.0,<3.0.0"
numpy = ">=1.24.0,<3.0.0"
tiktoken = ">=0.5.0,<1.0.0"
ollama = ">=0.1.0,<1.0.0"  # Ollama provider (기본 설치)
PyMuPDF = ">=1.23.0,<2.0.0"
pdfplumber = ">=0.10.0,<1.0.0"
pandas = ">=2.0.0,<3.0.0"

[tool.poetry.group.openai]
optional = true
[tool.poetry.group.openai.dependencies]
openai = ">=1.0.0,<3.0.0"

[tool.poetry.group.anthropic]
optional = true
[tool.poetry.group.anthropic.dependencies]
anthropic = ">=0.18.0,<1.0.0"

[tool.poetry.group.gemini]
optional = true
[tool.poetry.group.gemini.dependencies]
google-generativeai = ">=0.3.0,<1.0.0"

[tool.poetry.group.ollama]
optional = true
[tool.poetry.group.ollama.dependencies]
ollama = ">=0.1.0,<1.0.0"

[tool.poetry.group.cli]
optional = true
[tool.poetry.group.cli.dependencies]
typer = {extras = ["all"], version = ">=0.9.0,<1.0.0"}

[tool.poetry.group.mcp]
optional = true
[tool.poetry.group.mcp.dependencies]
fastmcp = ">=2.0.0,<3.0.0"
uvicorn = ">=0.23.0,<1.0.0"
sse-starlette = ">=1.6.0,<2.0.0"

[tool.poetry.group.web]
optional = true
[tool.poetry.group.web.dependencies]
fastapi = ">=0.100.0,<1.0.0"
uvicorn = ">=0.23.0,<1.0.0"
websockets = ">=14.0,<16.0.0"  # Updated for fastmcp compatibility
python-multipart = ">=0.0.22,<0.0.23"  # File uploads
motor = ">=3.3.0,<4.0.0"
pymongo = ">=4.0.0,<5.0.0"
cryptography = ">=41.0.0,<44.0.0"  # API key encryption
redis = ">=7.1.0,<8.0.0"  # Redis client for caching and monitoring
ollama = ">=0.1.0,<1.0.0"  # Ollama provider for local models
google-generativeai = ">=0.3.0,<1.0.0"  # Google Gemini provider
networkx = ">=3.0.0,<4.0.0"  # Knowledge graphs (필수 - Client 초기화 시 필요)
google-api-python-client = ">=2.100.0,<3.0.0"
google-auth-oauthlib = ">=1.1.0,<2.0.0"
google-auth-httplib2 = ">=0.1.1,<1.0.0"
streamlit = ">=1.29.0,<2.0.0"
plotly = ">=5.18.0,<6.0.0"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
pytest-asyncio = ">=0.21.0,<2.0.0"
pytest-cov = ">=4.0.0,<5.0.0"
black = ">=23.0.0,<26.0.0"
ruff = ">=0.1.0,<1.0.0"
mypy = ">=1.0.0,<2.0.0"
bandit = ">=1.7.0,<2.0.0"
pre-commit = ">=3.0.0,<4.0.0"
faker = ">=20.0.0,<25.0.0"

# Scripts는 [project.scripts]에 정의되어 있으므로 여기서는 제거
